<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.fintrackpro.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="com.example.fintrackpro.ui.transaction.ExpenseFragment"
        android:label="@string/expenses"
        tools:layout="@layout/fragment_expense" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.fintrackpro.ui.budget.BudgetFragment"
        android:label="@string/budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.fintrackpro.ui.reports.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fintrackpro.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>